Fixed Overflow

--- a/styles.css
+++ b/styles.css
@@ -239,13 +239,10 @@ footer {
     font-size: 18px;
   }
   #contact .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
+    display: block;
   }
   #map {
     height: 400px;
-    width: 400px;
   }
   #form {
     padding-left:10%;
